# docker_test_1

./: .env.example  Dockerfile  commands.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
core/: settings.py
