[tool.poetry]
name = "docker_test_1"
version = "0.1.0"
description = ""
authors = ["Ihar Shauchuk <shauchuk.ihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
